[tool.poetry]
name = "calculator"
version = "0.1.0"
description = "The Calculator package is a simple Python package that provides a `Calculator` class for performing basic arithmetic operations."
authors = ["Petar Krešimir Borić"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
engineering-calculator = "^1.10"
hatchling = "^1.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"